fix alignment issue

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -51,6 +51,7 @@
 
       display: flex;
       flex-direction: column;
+      align-items: center;
 
       p {
         max-width: fit-content;
